# CMake-Template

./: .clang-format  .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  qodana.yaml  sonar-project.properties
.distro/: cmake-template.spec
.distro/plans/: ctest.fmf  main.fmf  main.fmf.dist-git  python.fmf  rpminspect.fmf
.distro/tests/: smoke.fmf
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml  step_coverage.yaml  step_docs.yaml  step_pre-commit.yaml  step_static-analysis.yaml  step_test.yaml
cmake/: CMakePresets-CI.json  CMakePresets-defaults.json  Findfmt.cmake  TemplateConfig.cmake.in  Template_Helpers.cmake  Template_test.cmake  template.pc.in
docs/: conf.py  index.md
docs/guides/: index.md  user.md
docs/guides/developer/: index.md  who-is-the-developer.md
docs/guides/developer/paradigms/: export.md  import.md  index.md  namespace.md  options.md  subproject.md  test-suite.md  top-level-cmake.md
docs/guides/developer/tools/: codecov.md  github-workflows.md  index.md  packit.md  pre-commit.md  qodana.md  rtd.md  sonarcloud.md  tmt.md
docs/guides/user/: build.md  configure.md  download.md  index.md  install.md  test.md  troubleshooting.md  who-is-the-user.md
docs/guides/user/configure/: import.md  index.md  options.md
src/: CMakeLists.txt  main.cpp  template.cpp  template.h
test/: CMakeLists.txt  ctest.fmf  main.fmf  test.sh
test/functional/: CMakeLists.txt
test/package/: CMakeLists.txt
test/package/FetchContent/: CMakeLists.txt
test/package/find_package/: CMakeLists.txt
test/package/pip/: CMakeLists.txt  main.fmf  pyproject.toml  test.sh
test/package/pkg-config/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_main.cpp
