[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "CMake-Template"
description = "Development environment for CMake Template"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx >= 7.0",
    "furo",
    "sphinx-design",
    "sphinx-togglebutton",
    "myst-parser",
    "breathe",
    "sphinx-tippy",
    "sphinx-copybutton",
    "sphinx-prompt",
]

[project.entry-points."cmake.prefix"]
CMakeTemplatePrefix = "cmake_template"

[tool.scikit-build]
wheel.install-dir = "cmake_template"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
# Get the project version from the CMakeLists's project()
input = "CMakeLists.txt"
regex = '''(?sm)
^project\s*\(\s*Template\s+.*VERSION\s+(?P<value>[\d\.]+).*\)$
'''
